--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-google-generativeai==0.2.1
+google-generativeai==0.8.4
 scikit-learn==1.0.2
 sentence-transformers==2.2.0
-torch==1.10.0
+torch=2.5.1
+flask==3.0.3
+python-dotenv==1.0.1
+numpy==2.0.0
